# ParloPlusPlus

./: .gitignore  BlockingQueue.h  CMakeLists.txt  EncryptedPacket.h  EncryptionArgs.h  EncryptionMode.h  GoodbyePacket.cpp  GoodbyePacket.h  HeartbeatPacket.cpp  HeartbeatPacket.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  NetworkClient.cpp  NetworkClient.h  Packet.cpp  Packet.h  PacketHandler.h  PacketHeaders.h  Parlo++.vcxproj  Parlo.h  ParloIDs.h  ProcessingBuffer.cpp  ProcessingBuffer.h  README.md  Socket.cpp  Socket.h  framework.h  vcpkg readme.txt  vcpkg.json
.github/workflows/: c-cpp.yml
tests/: ProcessingBufferTests.cpp  tests.vcxproj
tests/libs/: Parlo++.lib  gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
